# nwm

./: .gitignore  CMakeLists.txt  default.nix  flake.nix  justfile  run.sh
src/: CMakeLists.txt  main.c  nwm.c  nwm.cc
